47 - refactored DefaultBeanFactory to create beans in runtime; added constructor autowiring logic (AbstractAutowireCapableBeanFactory,ConstructorResolver); created ClassUtils for utils on class types; expanded Java Docs